alignment fix

--- a/src/app/(all-pages)/(other-pages)/guestor/master/ReservationForm.module.css
+++ b/src/app/(all-pages)/(other-pages)/guestor/master/ReservationForm.module.css
@@ -1,10 +1,10 @@
 .container {
-    /* padding: 20px; */
+    padding: 20px;
     background-color: white;
     border-radius: 8px;
-    width: 100%;
+    width: 95%;
     /* margin: auto; */
-    height: calc(100vh - 75px);
+    height: calc(100vh - 80px);
     margin-left: auto;
   }
 
