--- a/src/app/(all-pages)/(other-pages)/guestor/master/guesMaser.module.css
+++ b/src/app/(all-pages)/(other-pages)/guestor/master/guesMaser.module.css
@@ -1,6 +1,7 @@
 .container {
     width: 400px;
     margin: 0 auto;
+    padding-left: 50px;
 }
 
 .formGroup {
